# minifun-cli

./: Cargo.toml
src/: main.rs
src/libminifun/: Cargo.toml
src/libminifun/src/: lib.rs  value.rs
src/libminifun/src/parser/: lexer.rs  mod.rs
